--- a/two/index.html
+++ b/two/index.html
@@ -180,7 +180,7 @@
         </div>
       </a>
       
-      <a href="https://integritymedicalservice.com/" target="_blank" class="work-card">
+      <a href="https://integritymedicalservice.com/" target="_blank" class="work-card integrity-card">
         <div class="work-image">
           <img src="images/integrity.png" alt="Integrity Medical Service" />
         </div>
