--- a/two/index.html
+++ b/two/index.html
@@ -47,7 +47,7 @@
       <li><a href="#process">Process</a></li>
       <li><a href="#work">Work</a></li>
       <li><a href="#services">Services</a></li>
-      <li><a href="#contact">Contact</a></li>
+      <li><a href="#contact" class="contact-link">Contact</a></li>
     </ul>
   </nav>
 
