--- a/two/index.html
+++ b/two/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Two Lines Studio — Web Design & Development in Colorado | Jessica Classon</title>
+  <title>Two Lines Studio — Web Design & Development in Colorado</title>
   <meta name="description" content="Two Lines Studio offers professional web design, development, SEO, and branding services for small businesses. Based in Colorado. MERN stack developer specializing in conversion-focused websites." />
   <meta name="author" content="Jessica Classon" />
   
@@ -28,9 +28,9 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap" />
   <!-- Favicon & webmanifest -->
   <!-- PNG fallbacks (uploaded) -->
-  <link rel="icon" type="image/png" sizes="32x32" href="/images/jessfavicon32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/images/jessfavicon16.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="/images/jessfaviconAppleTouch.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/images/favicon-192.png">
+  <link rel="icon" type="image/png" sizes="48x48" href="/images/favicon-48.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/images/favicon-180.png">
   <link rel="shortcut icon" href="/favicon.ico">
   <link rel="manifest" href="/site.webmanifest">
   <meta name="theme-color" content="#0b1113">
@@ -108,7 +108,7 @@
         <div class="walk-frame"><img src="images/j.png" alt="" aria-hidden="true" loading="lazy"/></div>
         <div class="walk-frame"><img src="images/e.png" alt="" aria-hidden="true" loading="lazy"/></div>
         <div class="walk-frame"><img src="images/s.png" alt="" aria-hidden="true" loading="lazy"/></div>
-        <div class="walk-frame"><img src="images/i.png" alt="" aria-hidden="true" loading="lazy"/></div>
+        <div class="walk-frame"><img src="images/ii.png" alt="" aria-hidden="true" loading="lazy"/></div>
         <div class="walk-frame"><img src="images/c.png" alt="" aria-hidden="true" loading="lazy"/></div>
         <div class="walk-frame"><img src="images/a.png" alt="" aria-hidden="true" loading="lazy"/></div>
         <div class="walk-frame"><img src="images/ee.png" alt="" aria-hidden="true" loading="lazy"/></div>
