--- a/two/privacy.html
+++ b/two/privacy.html
@@ -4,6 +4,23 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Privacy Policy — Two Lines Studio</title>
+  <meta name="description" content="Privacy Policy for Two Lines Studio." />
+  <link rel="canonical" href="https://twolinesstudio.com/privacy.html" />
+  <meta property="og:title" content="Privacy Policy — Two Lines Studio" />
+  <meta property="og:description" content="Privacy Policy for Two Lines Studio." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://twolinesstudio.com/privacy.html" />
+  <meta property="og:image" content="https://twolinesstudio.com/images/image4.png" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Privacy Policy — Two Lines Studio" />
+  <meta name="twitter:description" content="Privacy Policy for Two Lines Studio." />
+  <meta name="twitter:image" content="https://twolinesstudio.com/images/image4.png" />
+  <link rel="icon" type="image/png" sizes="192x192" href="/images/favicon-192.png">
+  <link rel="icon" type="image/png" sizes="48x48" href="/images/favicon-48.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/images/favicon-180.png">
+  <link rel="shortcut icon" href="/favicon.ico">
+  <link rel="manifest" href="/site.webmanifest">
+  <meta name="theme-color" content="#0b1113">
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
